compiler/testData/diagnostics/tests/resolve/implicitPropertyTypeThatMakesBehaviorOrderDependant.diag.txt
/NoWarningsInCaseOfNullExplicitReceiver.kt:44:16: error: type checking has run into a recursive problem. Easiest workaround: specify types of your declarations explicitly
    fun f3() = f3()
               ^^^^
